# src/main/kotlin/eu/europa/ec/eudi/verifier/endpoint/adapter/out/jose/RequestObject.kt
@@ -62,7 +62,7 @@ internal fun requestObjectFromDomain(
                 responseUri = null,
                 issuedAt = issuedAt,
                 transactionData = transactionData,
-                expectedOrigins = listOf(channel.origin),
+                expectedOrigins = channel.expectedOrigins,
             )
         }
 
